@@ -8,6 +8,8 @@ o FIX: update to revised network loadings signs
 
 o FIX: bug in argument 'returnAllResults' for `EBICglasso.qgraph`
 
+o UPDATE: `network.predictability` uses empirical inverse variances (rather than network-implied)
+
 
 Changes in version 2.0.5
 
